# willow-stubs

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  stubtest-allowlist.txt  tox.ini
tests/: conftest.py  django_settings.py  test_stubs.yml
willow-stubs/: __init__.pyi  image.pyi  registry.pyi  svg.pyi
willow-stubs/optimizers/: __init__.pyi  base.pyi  cwebp.pyi  gifsicle.pyi  jpegoptim.pyi  optipng.pyi  pngquant.pyi
willow-stubs/plugins/: opencv.pyi  pillow.pyi  wand.pyi
willow-stubs/utils/: deprecation.pyi
